src/objects/Section__c.object
<CustomObject>
    <fields>
        <fullName>SplitPay_Marketing_Wording__c</fullName>
        <description>The SplitPay Marketing Wording that appears in the book.</description>
        <inlineHelpText>The SplitPay Marketing Wording that appears in the book.</inlineHelpText>
        <label>Resident-SplitPay Cover Guide Wording</label>
        <length>36000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SplitPay_Processing_Instructions__c</fullName>
        <description>States special processing instructions for Ops</description>
        <label>SplitPay Processing Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Product_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Product (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates at what level the employer funds for SplitPay</description>
        <inlineHelpText>Indicates at what level the employer funds for SplitPay</inlineHelpText>
        <label>Standard Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_downgrade_option_at_tier_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates at what level the employer funds for SplitPay</description>
        <inlineHelpText>Indicates at what level the employer funds for SplitPay</inlineHelpText>
        <label>Standard &apos;downgrade&apos; option at tier 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
Group__r.Is_Active__c = &apos;Draft&apos;, &apos;Draft&apos;,
IF(
Group__r.Is_Active__c = &apos;Pending&apos;, &apos;Pending&apos;,
IF(
Date_Closed__c &lt;= TODAY(), &apos;Closed&apos;, Group__r.Is_Active__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Std_downgrade_option_at_tier_3_emp_sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>STD Downgrade Option at tier 3 (ES)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Street_City__c</fullName>
        <label>Street City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Postcode__c</fullName>
        <label>Street Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_State__c</fullName>
        <label>Street State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Street__c</fullName>
        <label>Street Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminate_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terminate Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminate_members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terminate members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_1_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tier 1 (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_2_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tier 2 (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_3_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tier 3 (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_3_Forced_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tier 3 (Forced) - (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier_Funded_to__c</fullName>
        <label>Tier Funded to</label>
        <picklist>
            <picklistValues>
                <fullName>Base Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Nominated Tier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_direct_debit_only_DD_section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update direct debit (only DD section)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <formula>Group__r.Version__c</formula>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Rebate_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Rebate Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voluntary_Tier_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voluntary Tier Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warnings_Alerts__c</fullName>
        <description>Warnings specific to the section</description>
        <label>Warnings &amp; Alerts</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Worksite__c</fullName>
        <label>Worksite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Family_cover_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>% of Family cover (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Family_cover__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates at what level the employer funds for SplitPay</description>
        <inlineHelpText>Indicates at what level the employer funds for SplitPay</inlineHelpText>
        <label>% of Family cover</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_standard_product_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>% of standard product (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_standard_product__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates at what level the employer funds for SplitPay</description>
        <inlineHelpText>Indicates at what level the employer funds for SplitPay</inlineHelpText>
        <label>% of standard product</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_Section_in_Draft_Only</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
AND(
ISCHANGED(Date_Closed__c),
Group__r.RecordType.Name != &apos;Draft&apos;),
TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Date_Closed__c</errorDisplayField>
        <errorMessage>You can only close a section via a draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Publish_SP_Inpatriate_Wording</fullName>
        <active>false</active>
        <errorConditionFormula>Inpatriate_SplitPay_Cover_Guide_Wording__c  != null &amp;&amp;  ISPICKVAL( Publish_SP_Inpatriate_Wording__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Publish_SP_Inpatriate_Wording__c</errorDisplayField>
        <errorMessage>Publish SP Inpatriate Wording is mandatory when  &apos;Inpatriate - SplitPay Cover Guide Wording&apos; field is completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_publish_SP_resident_wording</fullName>
        <active>false</active>
        <errorConditionFormula>SplitPay_Marketing_Wording__c   != null &amp;&amp;  ISPICKVAL( Publish_SP_Resident_Wording__c, &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Publish_SP_Resident_Wording__c</errorDisplayField>
        <errorMessage>Publish SP Resident Wording is mandatory when Resident - SplitPay Cover Guide Wording  is set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OMS_Disable_Date_Cannot_be_before_Activa</fullName>
        <active>true</active>
        <errorConditionFormula>OMS_Activation_Date__c != null &amp;&amp;  OMS_Disabled_Date__c != null  &amp;&amp; OMS_Disabled_Date__c &lt; OMS_Activation_Date__c</errorConditionFormula>
        <errorDisplayField>OMS_Disabled_Date__c</errorDisplayField>
        <errorMessage>OMS Disable Date cannot be before OMS Activation Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Comments_Emp_sub</fullName>
        <active>true</active>
        <description>Comments required when other selected</description>
        <errorConditionFormula>AND(
Other_Emp_Sub__c,
ISNULL(Comments_Emp_Sub__c )
)</errorConditionFormula>
        <errorMessage>Comments (Emp Sub) are required when you select the Other (Emp Sub) option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Comments_Exc</fullName>
        <active>true</active>
        <description>Comments required when other selected</description>
        <errorConditionFormula>AND(
Other_Exc__c,
ISNULL(Comments_Exc__c )
)</errorConditionFormula>
        <errorMessage>Comments (Exc) are required when you select the Other (Exc) option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prepaid_Date</fullName>
        <active>true</active>
        <description>If &apos;Yes&apos; is selected to field &apos;Employer has prepaid&apos;, then this date must be entered</description>
        <errorConditionFormula>AND(
Has_Employer_prepaid__c,
ISNULL(Prepaid_to__c )
)</errorConditionFormula>
        <errorMessage>As the employer has prepaid please enter a date in the &quot;Prepaid to&quot; field</errorMessage>
    </validationRules>
</CustomObject>